# perhabs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  Trunk.toml  index.html
appdata/: config.json  exercise_configs.json  sentences_EN.txt  word_categories_EN.txt  word_categories_NL.txt
doc/: help.html  search-index.js  settings.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  (+1 more)
excdata/: word_categories_EN.txt
excdata/episodic_memory/: episodic_memory_EN.txt  episodic_memory_NL.txt
excdata/sentences/: sentences_EN.txt  sentences_NL.txt
src/: app.rs  asset_loader.rs  configs.rs  egui_style.rs  evaluation.rs  exercises.rs  lib.rs  main.rs  menu.rs  modules.rs  sessionman.rs  sessions.rs  shared.rs  time_formatting.rs  widgets.rs  windowman.rs  wm.rs
src/asset_loader/: exercise_config_collection.rs  perhabs_config.rs
src/asset_loader/exercise_config/: vergence.rs  visual_recognition.rs  visual_saccades.rs
src/exercises/: binocular_saccades.rs  clock.rs  cog_numbers.rs  cog_words.rs  depth_perception.rs  episodic_memory.rs  mod.rs  rand_timer.rs  sentences.rs  seq_numbers.rs  spatial_drawing.rs  spatial_hearing.rs  vergence.rs  vis_recognition.rs  visual_alignment.rs  visual_recognition.rs  visual_saccades.rs
src/exercises/depth_perception/: anaglyph.rs
src/exercises/shared/: grid.rs
src/exercises/spatial_drawing/: editor.rs  exercise.rs  painters.rs  selector.rs
src/exercises/spatial_hearing/: soundsource.rs  visual_space.rs
src/exercises/vergence/: anaglyph.rs
src/exercises/visual_puzzles/: container_search.rs  mod.rs  numbered_squares.rs
src/exercises/visual_puzzles/container_search/: containers.rs  game_logic.rs  session_ui.rs
src/exercises/visual_puzzles/numbered_squares/: session.rs
src/modules/: asset_loader.rs  clock.rs  cog_numbers.rs  cog_words.rs  configs.rs  cpal_audio.rs  debug_info.rs  evaluation.rs  metronome.rs  multitasker.rs  rand_timer.rs  sentences.rs  seq_numbers.rs  sequences.rs  timer.rs  vergence.rs  widgets.rs
src/modules/asset_loader/: exercise_config.rs  exercise_config_collection.rs  perhabs_config.rs  sentences.rs
src/modules/asset_loader/exercise_config/: visual_recognition.rs  visual_saccades.rs
src/modules/exercises/: anaglyph.rs
src/sessions/: cog_numbers.rs  cog_words.rs  seq_numbers.rs  spatial_drawing.rs  vergence.rs
src/sessions/exercises/: anaglyph.rs
src/sessions/spatial_drawing/: editor.rs  exercise.rs  painters.rs  selector.rs
src/shared/: about_screen.rs  anaglyph.rs  anaglyph_color.rs  appdata.rs  asset_loader.rs  cpal_audio.rs  egui_style.rs  evaluation.rs  mod.rs  pos3.rs  timer.rs
src/shared/asset_loader/: appdata.rs  exercise_config.rs  exercise_config_collection.rs  sentences.rs
src/shared/asset_loader/exercise_config/: depth_perception.rs  vergence.rs  visual_recognition.rs  visual_saccades.rs
src/tools/: clock.rs  debug_info.rs  metronome.rs  multitasker.rs  rand_timer.rs
src/widgets/: calibrate_anaglyph.rs  circle_mutable.rs  evaluation.rs  exercise_config_menu.rs  mod.rs
src/wm/: mod.rs  sessionman.rs  windowman.rs
webassets/: manifest.json  sw.js
