[package]
name = "perhabs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features=["derive"]}
serde_json = "1"
chrono = "0.4"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
tts = "0.25"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
strum = "0.24"
strum_macros = "0.24"
timer = "0.2"
log = "0.4.17"
relative-path = "1.7.3"
reqwest = {version = "0.11.14", features=["blocking", "json"]}

#egui stuff
egui = "0.21"
eframe = { version = "0.21", features = ["persistence"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]