[package]
name = "perhabs"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
tts = "0.25"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
log = "0.4.17"
relative-path = "1.9.2"
ehttp = "0.3"
poll-promise = "0.3"
cpal = { version = "0.15", features = ["wasm-bindgen"] }
num = "0.4.0"

#egui stuff
egui = "0.26"
egui_extras = "0.26"
eframe = { version = "0.26", features = ["persistence"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'GainNode',
    'OscillatorNode',
    'OscillatorType',
]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
